--- a/style.css
+++ b/style.css
@@ -49,10 +49,14 @@ body{
     border:black solid 2px;
     color:white;
     width:150px;
-    background-color: rgb(252, 95, 56);
+    background-color: rgb(250, 79, 36);
     font-size: 30px;
     padding:20px;
     border-radius: 10px;
     margin:10px;
     box-sizing: border-box;
+}
+
+.buttons:hover{
+    background-color: rgb(253, 139, 110);
 }
